--- a/lines/4.html
+++ b/lines/4.html
@@ -1,9 +1,9 @@
-<!--
+
 <h1 class="lines">ACAB</h1>
--->
+
 
 
 
 <!--
-Suffit de décommenter le code du dessus
+Exemple de commit au MASTER BENETIER PAUL
 -->
